Fixing and cleaning
Whole lotta bug fixes and renamed "Auth Key" to "Account Key", same as website

--- a/H1EMU-Launcher/Language/StringResources.bg-BG.xaml
+++ b/H1EMU-Launcher/Language/StringResources.bg-BG.xaml
@@ -21,8 +21,7 @@
     <system:String x:Key="item17">Влизането в Steam профила е неуспешно :</system:String>
     <system:String x:Key="item18">Добави</system:String>
     <system:String x:Key="item19">• Статус •</system:String>
-    <system:String x:Key="item21">Got depot key for {0} result: {1}</system:String>
-    <system:String x:Key="item22">Got CDN auth token for {0} result: {1}</system:String>
+    <system:String x:Key="item21">Получих ключ за депо за {0} резултат: {1}</system:String>
     <system:String x:Key="item23">Инсталирането е готово!</system:String>
     <system:String x:Key="item24">Трябва да инсталирате друга версия.? Натиснете бутона отдолу за да изтеглете отново!</system:String>
     <system:String x:Key="item25">Влизане</system:String>
@@ -40,7 +39,7 @@
     <system:String x:Key="item37">Успещно изтеглихте H1Z1: Just Survive version</system:String>
     <system:String x:Key="item38">Успешно спряхте изтеглянето на H1Z1: Just Survive</system:String>
     <system:String x:Key="item39">ContentDownloaderException:</system:String>
-    <system:String x:Key="item40">Download failed to due to an unhandled exception:</system:String>
+    <system:String x:Key="item40">Изтеглянето не бе успешно поради необработено изключение:</system:String>
     <system:String x:Key="item41">Директория на играта:</system:String>
     <system:String x:Key="item42">RE-PATCH</system:String>
     <system:String x:Key="item43">Последен</system:String>
@@ -70,20 +69,22 @@
     <system:String x:Key="item67">Не сега</system:String>
     <system:String x:Key="item68">Вижте файловете...</system:String>
     <system:String x:Key="item69">• Версията на играта не е открита •</system:String>
-    <system:String x:Key="item70">Detecting game version...</system:String>
-    <system:String x:Key="item71">Game version detected: 15th January 2015</system:String>
+    <system:String x:Key="item70">Открива се версията на играта...</system:String>
+    <system:String x:Key="item71">Версия на играта открита: 22ри Декември 2015</system:String>
     <system:String x:Key="item72">• Версята на играта не се подържаG •</system:String>
-    <system:String x:Key="item73">Please wait for the current tasks to complete.</system:String>
+    <system:String x:Key="item73">Моля, изчакайте завършването на текущите задачи.</system:String>
     <system:String x:Key="item74">Версия на играта открита: 22ри Декември 2016</system:String>
     <system:String x:Key="item75">Директория</system:String>
     <system:String x:Key="item76">Изтриване на стар пач...</system:String>
     <system:String x:Key="item77">Потвърджаващ код код:</system:String>
-    <system:String x:Key="item78">Моля напишете вашият 2 факторен потвърджаващ кодPlease enter your two factor authentication code.</system:String>
+    <system:String x:Key="item78">Моля, въведете двуфакторния код за удостоверяване, изпратен до вашето приложение Steam.</system:String>
+    <system:String x:Key="item79">Моля, въведете двуфакторния код за удостоверяване, изпратен на вашия имейл.</system:String>
     <system:String x:Key="item80">Saved config before loading</system:String>
-    <system:String x:Key="item83">Failed to retrieve CDN token for server {0} depot {1}</system:String>
-    <system:String x:Key="item84">Couldn't find any depots to download for app {0}</system:String>
-    <system:String x:Key="item85">Depot {0} not listed for app {1}</system:String>
-    <system:String x:Key="item86">Manifest {0} ({1})...</system:String>
+    <system:String x:Key="item81">Моля напишете вашият 2 факторен потвърджаващ код.</system:String>
+    <system:String x:Key="item83">Неуспешно извличане на CDN токен за сървър {0} депо {1}</system:String>
+    <system:String x:Key="item84">Не можах да намеря депа за изтегляне за приложението {0}</system:String>
+    <system:String x:Key="item85">Депо {0} не е в списъка за приложение {1}</system:String>
+    <system:String x:Key="item86">Манифест {0} ({1})...</system:String>
     <system:String x:Key="item87">Да</system:String>
     <system:String x:Key="item88">Не</system:String>
     <system:String x:Key="item89">Избраната директория  не е празна.\n\nИзкате ли да продължите въпреки това?</system:String>
@@ -143,10 +144,10 @@
     <system:String x:Key="item150">Поправяне</system:String>
     <system:String x:Key="item151">Името на сървара или IP адреса не са верни.</system:String>
     <system:String x:Key="item152">Изтриване на папката на BattlEye ...</system:String>
-    <system:String x:Key="item153">Когато се свързвате към сърварите на H1Emu ви трябва ключ за потвърждение. This can be done in the Settings menu.</system:String>
-    <system:String x:Key="item154">Ключ за потвърждение...</system:String>
-    <system:String x:Key="item155">Ключ за потвърждение</system:String>
-    <system:String x:Key="item156">За да играете на сървърите  на H1emu, ви трябва ключ за потвърждение. Може да намерите този ключ в профила ви на:</system:String>
+    <system:String x:Key="item153">Когато се свързвате към сърварите на H1Emu ви трябва Ключ За Aкаунт. Това може да стане в менюто Настройки.</system:String>
+    <system:String x:Key="item154">Ключ За Aкаунт...</system:String>
+    <system:String x:Key="item155">Ключ За Aкаунт</system:String>
+    <system:String x:Key="item156">За да играете на сървърите на H1emu, ви трябва Ключ За Aкаунт. Може да намерите този ключ в профила ви на:</system:String>
     <system:String x:Key="item157">Най -новата версия на сървъра е версия за разработка, имайте предвид, че може да е нестабилна и да причини сривове.\n\nИскате ли все пак да продължите?</system:String>
     <system:String x:Key="item158">Добре дошли в H1Emu!</system:String>
     <system:String x:Key="item159">ПРЕДИ ДА ЗАПОЧНЕТЕ, моля, имайте предвид, че този проект поддържа само следните версии на играта:</system:String>
