--- a/H1EMU-Launcher/Language/StringResources.en.xaml
+++ b/H1EMU-Launcher/Language/StringResources.en.xaml
@@ -22,7 +22,6 @@
     <system:String x:Key="item18">ADD</system:String>
     <system:String x:Key="item19">• Status •</system:String>
     <system:String x:Key="item21">Got depot key for {0} result: {1}</system:String>
-    <system:String x:Key="item22">Got CDN auth token for {0} result: {1}</system:String>
     <system:String x:Key="item23">Download complete!</system:String>
     <system:String x:Key="item24">Need to download a different version? Press the button below to login again!</system:String>
     <system:String x:Key="item25">LOGIN</system:String>
@@ -78,8 +77,10 @@
     <system:String x:Key="item75">Directory</system:String>
     <system:String x:Key="item76">Deleting old patch...</system:String>
     <system:String x:Key="item77">Auth Code</system:String>
-    <system:String x:Key="item78">Please enter your two factor authentication code.</system:String>
+    <system:String x:Key="item78">Please enter the two factor authentication code sent to your Steam app.</system:String>
+    <system:String x:Key="item79">Please enter the two factor authentication code sent to your email.</system:String>
     <system:String x:Key="item80">Saved config before loading</system:String>
+    <system:String x:Key="item81">Please enter the two factor authentication code.</system:String>
     <system:String x:Key="item83">Failed to retrieve CDN token for server {0} depot {1}</system:String>
     <system:String x:Key="item84">Couldn't find any depots to download for app {0}</system:String>
     <system:String x:Key="item85">Depot {0} not listed for app {1}</system:String>
@@ -143,10 +144,10 @@
     <system:String x:Key="item150">PATCHING</system:String>
     <system:String x:Key="item151">Server name or IP not valid.</system:String>
     <system:String x:Key="item152">Deleting BattlEye folder...</system:String>
-    <system:String x:Key="item153">When connecting to H1Emu Servers you must set an Auth Key. This can be done in the Settings menu.</system:String>
-    <system:String x:Key="item154">Auth Key...</system:String>
-    <system:String x:Key="item155">Auth Key</system:String>
-    <system:String x:Key="item156">To play on H1Emu Servers, you need to set an Auth Key. You can find this on your profile at:</system:String>
+    <system:String x:Key="item153">When connecting to H1Emu Servers you must set an Account Key. This can be done in the Settings menu.</system:String>
+    <system:String x:Key="item154">Account Key...</system:String>
+    <system:String x:Key="item155">Account Key</system:String>
+    <system:String x:Key="item156">To play on H1Emu Servers, you need to set an Account Key. You can find this on your profile at:</system:String>
     <system:String x:Key="item157">The latest version of the server is an in development build, be warned that it may be unstable and cause crashes.\n\nWould you like to continue?</system:String>
     <system:String x:Key="item158">Welcome to H1Emu!</system:String>
     <system:String x:Key="item159">BEFORE YOU BEGIN, please note that this project only supports the following game versions:</system:String>
