--- a/H1EMU-Launcher/Language/StringResources.pt-PT.xaml
+++ b/H1EMU-Launcher/Language/StringResources.pt-PT.xaml
@@ -22,7 +22,6 @@
     <system:String x:Key="item18">ADD</system:String>
     <system:String x:Key="item19">• Estado •</system:String>
     <system:String x:Key="item21">Chave de depósito para {0} resultado: {1}</system:String>
-    <system:String x:Key="item22">Token de autorização CDN recebida para {0} resultado: {1}</system:String>
     <system:String x:Key="item23">Download completo!</system:String>
     <system:String x:Key="item24">Precisa de descarregar outra versão? Prima o botão abaixo para iniciar novamente a sessão!</system:String>
     <system:String x:Key="item25">Iniciar Sessão</system:String>
@@ -78,8 +77,10 @@
     <system:String x:Key="item75">Directório</system:String>
     <system:String x:Key="item76">A eliminar as correções antigas...</system:String>
     <system:String x:Key="item77">código de autenticação</system:String>
-    <system:String x:Key="item78">Por favor introduza o seu código de autenticação de dois factores.</system:String>
+    <system:String x:Key="item78">Digite o código de autenticação de dois fatores enviado ao seu aplicativo Steam.</system:String>
+    <system:String x:Key="item79">Insira o código de autenticação de dois fatores enviado para o seu e-mail.</system:String>
     <system:String x:Key="item80">Configuração guardada antes do carregamento</system:String>
+    <system:String x:Key="item81">Por favor introduza o seu código de autenticação de dois factores.</system:String>
     <system:String x:Key="item83">Falha de recuperação do Token CDN para o servidor {0} depósito {1}</system:String>
     <system:String x:Key="item84">Não foi possível encontrar depósitos para descarregar para a App {0}</system:String>
     <system:String x:Key="item85">Depósito {0} não listado para a App {1}</system:String>
@@ -143,10 +144,10 @@
     <system:String x:Key="item150">A CORRIGIR</system:String>
     <system:String x:Key="item151">Nome do servidor ou IP incorretos.</system:String>
     <system:String x:Key="item152">A eliminar pasta - BattlEye...</system:String>
-    <system:String x:Key="item153">Ao ligar aos Servidores H1Emu deve definir uma chave de autorização. Isto pode ser feito no menu Definições.</system:String>
-    <system:String x:Key="item154">Chave de autorização...</system:String>
-    <system:String x:Key="item155">Chave de autorização</system:String>
-    <system:String x:Key="item156">Para poder jogar nos servidores H1Emu, é necessário definir uma chave de autenticação. Pode encontrar isto no seu perfil em:</system:String>
+    <system:String x:Key="item153">Ao ligar aos Servidores H1Emu deve definir uma Chave da Conta. Isto pode ser feito no menu Definições.</system:String>
+    <system:String x:Key="item154">Chave da Conta...</system:String>
+    <system:String x:Key="item155">Chave da Conta</system:String>
+    <system:String x:Key="item156">Para poder jogar nos servidores H1Emu, é necessário definir uma Chave da Conta. Pode encontrar isto no seu perfil em:</system:String>
     <system:String x:Key="item157">A versão recente do servidor é uma versão de desenvolvimento. Tenha em conta que pode ser instável e causar paragens.\n\n Deseja continuar de qualquer forma?</system:String>
     <system:String x:Key="item158">Bem vindo ao H1Emu!</system:String>
     <system:String x:Key="item159">ANTES DE INICIAR, tenha atenção que este projeto apenas suporta as seguintes versões de jogo:</system:String>
