--- a/H1EMU-Launcher/Language/StringResources.ru-RU.xaml
+++ b/H1EMU-Launcher/Language/StringResources.ru-RU.xaml
@@ -22,7 +22,6 @@
     <system:String x:Key="item18">ДОБАВИТЬ</system:String>
     <system:String x:Key="item19">• Статус •</system:String>
     <system:String x:Key="item21">Получен depot key для {0} результат: {1}</system:String>
-    <system:String x:Key="item22">Получен токен авторизации CDN для {0} результат: {1}</system:String>
     <system:String x:Key="item23">Загрузка завершена!</system:String>
     <system:String x:Key="item24">Нужно скачать другую версию? Нажмите кнопку ниже, чтобы снова войти в систему!</system:String>
     <system:String x:Key="item25">ВХОД</system:String>
@@ -78,8 +77,10 @@
     <system:String x:Key="item75">Директория</system:String>
     <system:String x:Key="item76">Удаление старого патча...</system:String>
     <system:String x:Key="item77">Код авторизации</system:String>
-    <system:String x:Key="item78">Пожалуйста, введите свой код двухфакторной аутентификации.</system:String>
+    <system:String x:Key="item78">Пожалуйста, введите код двухфакторной аутентификации, отправленный в ваше приложение Steam.</system:String>
+    <system:String x:Key="item79">Пожалуйста, введите код двухфакторной аутентификации, отправленный на вашу электронную почту.</system:String>
     <system:String x:Key="item80">Сохраненный конфиг перед загрузкой</system:String>
+    <system:String x:Key="item81">Пожалуйста, введите свой код двухфакторной аутентификации.</system:String>
     <system:String x:Key="item83">Не удалось получить токен CDN для сервера {0} depot {1}</system:String>
     <system:String x:Key="item84">Не удалось найти depot для загрузки приложения {0}</system:String>
     <system:String x:Key="item85">Depot {0} нет в списке для приложения {1}</system:String>
@@ -143,10 +144,10 @@
     <system:String x:Key="item150">УСТАНОВКА ПАТЧА</system:String>
     <system:String x:Key="item151">Имя сервера или IP недействителен.</system:String>
     <system:String x:Key="item152">Удаление папки BattlEye...</system:String>
-    <system:String x:Key="item153">При подключении к серверам H1Emu вы должны установить ключ аутентификации. Это можно сделать в меню настроек.</system:String>
-    <system:String x:Key="item154">Ключ аутентификации...</system:String>
-    <system:String x:Key="item155">Ключ аутентификации</system:String>
-    <system:String x:Key="item156">Чтобы играть на серверах H1Emu, вам необходимо установить ключ аутентификации. Вы можете найти его в своем профиле по адресу:</system:String>
+    <system:String x:Key="item153">При подключении к серверам H1Emu вы должны установить Ключ Учетной Записи. Это можно сделать в меню настроек.</system:String>
+    <system:String x:Key="item154">Ключ Учетной Записи...</system:String>
+    <system:String x:Key="item155">Ключ Учетной Записи</system:String>
+    <system:String x:Key="item156">Чтобы играть на серверах H1Emu, вам необходимо установить Ключ Учетной Записи. Вы можете найти его в своем профиле по адресу:</system:String>
     <system:String x:Key="item157">Последняя версия сервера - это сборка для разработки, имейте в виду, что она может работать нестабильно и вызывать сбои.\n\nВы все равно хотите продолжить?</system:String>
     <system:String x:Key="item158">Добро пожаловать в H1Emu!</system:String>
     <system:String x:Key="item159">ПРЕЖДЕ ЧЕМ НАЧАТЬ, обратите внимание, что этот проект поддерживает только следующие версии игр:</system:String>
